--- a/lAWANIYA.ipynb
+++ b/lAWANIYA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMcBU1jrQP6cqOVvtYZifMp",
+      "authorship_tag": "ABX9TyM21NKQRXOtVPN7iWNbvbc1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2771,16 +2771,17 @@
         "print(a.replace(\"i\",\"u\"))\n",
         "print(a.endswith(\" \"))\n",
         "print(a.startswith(\"a\"))\n",
-        "print(a.strip())\n"
+        "print(a.strip())\n",
+        "\n"
       ],
       "metadata": {
         "id": "P60UaEW3wUC1",
-        "outputId": "f6ce4ac6-5f94-41f3-fb3c-8a62e77f8778",
+        "outputId": "2e7d112e-3cbf-40df-93c4-bfcda2956be1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
@@ -2790,6 +2791,33 @@
             "True\n",
             "False\n",
             "i am ok\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "word=\"i am fine\"\n",
+        "if word[0]==\"i\":\n",
+        "  print(\"True\")\n",
+        "else:\n",
+        "  print(\"False\")"
+      ],
+      "metadata": {
+        "id": "ayRSeTWtkZ1L",
+        "outputId": "4cf68eec-0781-4cee-a39a-e05faa929f59",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n"
           ]
         }
       ]
@@ -2814,7 +2842,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3067,12 +3095,72 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#list and tuple\n",
+        "#strings are immutable and list are mutable in pyhton\n",
+        "course=[\"data analytics\", \"data science\", \"data engineering\"]\n",
+        "print(course)\n",
+        "print(type(course))#without square bracket it will be a tuple type and not list\n",
+        "\n",
+        "course[1]=\"data entry\"\n",
+        "print(course)\n",
+        "print(course[2])#indexing\n",
+        "print(course[:2])#slicing\n",
+        "print(course[-3:-1])#negative indexing in list\n"
+      ],
       "metadata": {
-        "id": "ysffAqOBTaq7"
+        "id": "ysffAqOBTaq7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a1c25708-03ea-4028-acf8-034d83744041"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['data analytics', 'data science', 'data engineering']\n",
+            "<class 'list'>\n",
+            "['data analytics', 'data entry', 'data engineering']\n",
+            "data engineering\n",
+            "['data analytics', 'data entry']\n",
+            "['data analytics', 'data entry']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list=[52,65,75,85]\n",
+        "print(marks)\n",
+        "list.append(58)#to add something new in the earlier list\n",
+        "print(list)\n",
+        "list.sort()#to arrange values in ascending order\n",
+        "print(list)\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yIx8XceQiXCL",
+        "outputId": "8225fbd8-280d-4ad7-b5f4-e65e82cb3059"
+      },
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[52, 65, 75, 85]\n",
+            "[52, 65, 75, 85, 58]\n",
+            "[52, 58, 65, 75, 85]\n"
+          ]
+        }
+      ]
     }
   ]
 }
