--- a/lAWANIYA.ipynb
+++ b/lAWANIYA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM21NKQRXOtVPN7iWNbvbc1",
+      "authorship_tag": "ABX9TyODITvClrFSBZwuT6zWxIMz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2781,7 +2781,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2811,13 +2811,152 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a=[5,6,7,8,9]\n",
+        "print(a)\n",
+        "print(a[2])\n",
+        "print(a[0]+a[3])\n",
+        "a.append(10)\n",
+        "print(a)\n",
+        "print(a[0:4])\n",
+        "print(a[-5:-2])\n",
+        "print(a[0:])\n",
+        "print(a[ :-1])"
+      ],
+      "metadata": {
+        "id": "a7KK0-tV4Nu8",
+        "outputId": "b580fccf-c602-4497-805c-61e543429db9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[5, 6, 7, 8, 9]\n",
+            "7\n",
+            "13\n",
+            "[5, 6, 7, 8, 9, 10]\n",
+            "[5, 6, 7, 8]\n",
+            "[6, 7, 8]\n",
+            "[5, 6, 7, 8, 9, 10]\n",
+            "[5, 6, 7, 8, 9]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a=[200,500,400,300]\n",
+        "sum=0\n",
+        "length=len(a)\n",
+        "for i in range (0,length):\n",
+        " sum=sum+a[i]\n",
+        "print(sum)"
+      ],
+      "metadata": {
+        "id": "posjTmAb9HfM",
+        "outputId": "91932fad-5f58-410d-df4b-4fc01d2904d3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1400\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#membership function\n",
+        "a=[200,500,400,300]\n",
+        "sum=0\n",
+        "for i in a:\n",
+        "  sum=sum+i\n",
+        "print(sum)"
+      ],
+      "metadata": {
+        "id": "pPM4R9cR5R6r",
+        "outputId": "b2664b85-c595-4894-c00b-8cb6f1091662",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1400\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "eHwJqfPaEoLb"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "items=[\"pizza\",\"burger\",\"cold coffee\",\"coke\",\"blue pacifico\",\"mojito\",\"soup\",\"fusion\",\"pasta\",\"flat bread\"]\n",
+        "price=[200,150,180,120,80,250,200,230,195]\n",
+        "discount=[20,15,18,12,8,25,20,23,30]\n",
+        "print(items)\n",
+        "print(price)\n",
+        "print(discount)\n",
+        "for i in price:\n",
+        "  sum=sum+i\n",
+        "print(sum)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "NEHyO3UYCu39",
+        "outputId": "8bc22701-793e-440b-e0c8-3941c0e3428c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['pizza', 'burger', 'cold coffee', 'coke', 'blue pacifico', 'mojito', 'soup', 'fusion', 'pasta', 'flat bread']\n",
+            "[200, 150, 180, 120, 80, 250, 200, 230, 195]\n",
+            "[20, 15, 18, 12, 8, 25, 20, 23, 30]\n",
+            "4610\n"
           ]
         }
       ]
@@ -3115,7 +3254,7 @@
         },
         "outputId": "a1c25708-03ea-4028-acf8-034d83744041"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3149,7 +3288,7 @@
         "id": "yIx8XceQiXCL",
         "outputId": "8225fbd8-280d-4ad7-b5f4-e65e82cb3059"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
