--- a/lAWANIYA.ipynb
+++ b/lAWANIYA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyODITvClrFSBZwuT6zWxIMz",
+      "authorship_tag": "ABX9TyOEzxhcnxxzLWYMh0KE6V/b",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2843,7 +2843,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2878,7 +2878,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2906,7 +2906,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2919,44 +2919,72 @@
     },
     {
       "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "eHwJqfPaEoLb"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
       "source": [
         "items=[\"pizza\",\"burger\",\"cold coffee\",\"coke\",\"blue pacifico\",\"mojito\",\"soup\",\"fusion\",\"pasta\",\"flat bread\"]\n",
-        "price=[200,150,180,120,80,250,200,230,195]\n",
-        "discount=[20,15,18,12,8,25,20,23,30]\n",
-        "print(items)\n",
-        "print(price)\n",
-        "print(discount)\n",
+        "price=[50,60,70,50,100,150,55,90,145,100]\n",
+        "print(\"items=\",items)\n",
+        "print(\"price:\",price)\n",
+        "print(\"__________\")\n",
+        "total_bill=0\n",
+        "discount=[10]\n",
+        "total_per_on_dis=0\n",
         "for i in price:\n",
-        "  sum=sum+i\n",
-        "print(sum)\n",
+        "  total_bill +=i\n",
+        "print(\"total bill:\", total_bill)\n",
+        "for i in discount:\n",
+        "  total_per_on_dis +=i\n",
+        "discount_amount=total_bill*total_per_on_dis/100\n",
+        "print(\"discount amount:\" ,discount_amount)\n",
+        "payable_bill=total_bill-discount_amount\n",
+        "print(\"________\")\n",
+        "print(\"payable_bill:\", payable_bill)\n",
         "\n"
       ],
       "metadata": {
-        "id": "NEHyO3UYCu39",
-        "outputId": "8bc22701-793e-440b-e0c8-3941c0e3428c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "REjCiiPuwCjD",
+        "outputId": "4f07137b-f30f-45e9-c3cf-53e267d5fb25"
       },
-      "execution_count": 31,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "['pizza', 'burger', 'cold coffee', 'coke', 'blue pacifico', 'mojito', 'soup', 'fusion', 'pasta', 'flat bread']\n",
-            "[200, 150, 180, 120, 80, 250, 200, 230, 195]\n",
-            "[20, 15, 18, 12, 8, 25, 20, 23, 30]\n",
-            "4610\n"
+            "items= ['pizza', 'burger', 'cold coffee', 'coke', 'blue pacifico', 'mojito', 'soup', 'fusion', 'pasta', 'flat bread']\n",
+            "price: [50, 60, 70, 50, 100, 150, 55, 90, 145, 100]\n",
+            "__________\n",
+            "total bill: 870\n",
+            "discount amount: 87.0\n",
+            "________\n",
+            "payable_bill: 783.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "discount=[5,6,7,5,10,15,6,10,15,10]\n",
+        "sum=0\n",
+        "print(discount[0]+discount[1]+discount[2]+discount[3]+discount[4]+discount[5]+discount[6]+discount[7]+discount[8]+discount[9])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eP5_dzmFuF7S",
+        "outputId": "296923d1-fc95-4b9e-c37a-bce1ffdc7d05"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "89\n"
           ]
         }
       ]
