--- a/lAWANIYA.ipynb
+++ b/lAWANIYA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOEzxhcnxxzLWYMh0KE6V/b",
+      "authorship_tag": "ABX9TyPWTw+3VQZ+vYvwcrKeON47",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2947,7 +2947,7 @@
         "id": "REjCiiPuwCjD",
         "outputId": "4f07137b-f30f-45e9-c3cf-53e267d5fb25"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2968,7 +2968,6 @@
       "cell_type": "code",
       "source": [
         "discount=[5,6,7,5,10,15,6,10,15,10]\n",
-        "sum=0\n",
         "print(discount[0]+discount[1]+discount[2]+discount[3]+discount[4]+discount[5]+discount[6]+discount[7]+discount[8]+discount[9])"
       ],
       "metadata": {
@@ -2976,9 +2975,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eP5_dzmFuF7S",
-        "outputId": "296923d1-fc95-4b9e-c37a-bce1ffdc7d05"
+        "outputId": "801b53b6-f773-4470-a896-fff0fb9859a2"
       },
-      "execution_count": 23,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -3302,21 +3301,24 @@
       "cell_type": "code",
       "source": [
         "list=[52,65,75,85]\n",
-        "print(marks)\n",
+        "print(list)\n",
         "list.append(58)#to add something new in the earlier list\n",
         "print(list)\n",
         "list.sort()#to arrange values in ascending order\n",
         "print(list)\n",
-        "\n"
+        "list.sort(reverse=True)\n",
+        "print(list)\n",
+        "list.reverse()\n",
+        "print(list)\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "yIx8XceQiXCL",
-        "outputId": "8225fbd8-280d-4ad7-b5f4-e65e82cb3059"
+        "outputId": "d5a805ed-974a-400e-8cf5-999b5cc64379"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -3324,7 +3326,10 @@
           "text": [
             "[52, 65, 75, 85]\n",
             "[52, 65, 75, 85, 58]\n",
-            "[52, 58, 65, 75, 85]\n"
+            "[52, 58, 65, 75, 85]\n",
+            "[85, 75, 65, 58, 52]\n",
+            "[52, 58, 65, 75, 85]\n",
+            "[52, 58, 65, 75, 85, 76]\n"
           ]
         }
       ]
