--- a/lAWANIYA.ipynb
+++ b/lAWANIYA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPWTw+3VQZ+vYvwcrKeON47",
+      "authorship_tag": "ABX9TyNZJ3ElE6aKRJMZjmH0PFTm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2869,21 +2869,24 @@
         "length=len(a)\n",
         "for i in range (0,length):\n",
         " sum=sum+a[i]\n",
-        "print(sum)"
+        " print(sum)"
       ],
       "metadata": {
         "id": "posjTmAb9HfM",
-        "outputId": "91932fad-5f58-410d-df4b-4fc01d2904d3",
+        "outputId": "eaf5fa8a-d0aa-4a3a-f781-dabf9339cf38",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "200\n",
+            "700\n",
+            "1100\n",
             "1400\n"
           ]
         }
@@ -2897,22 +2900,57 @@
         "sum=0\n",
         "for i in a:\n",
         "  sum=sum+i\n",
-        "print(sum)"
+        "  print(sum)"
       ],
       "metadata": {
         "id": "pPM4R9cR5R6r",
-        "outputId": "b2664b85-c595-4894-c00b-8cb6f1091662",
+        "outputId": "0cdf3c8f-93fc-4bbc-be96-f92e954530c1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "200\n",
+            "700\n",
+            "1100\n",
             "1400\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "items=[]\n",
+        "x=int(input(\"enter item number\"))\n",
+        "for i in range (x):\n",
+        "  item=input(\"enter item: \")\n",
+        "  items.append(item)\n",
+        "print(\"items:\",items)"
+      ],
+      "metadata": {
+        "id": "roeFJP7Oj93b",
+        "outputId": "84c5f36f-e96d-473e-af7d-076776b92f89",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter item number3\n",
+            "enter item: pizza\n",
+            "enter item: burger\n",
+            "enter item: coffee\n",
+            "items: ['pizza', 'burger', 'coffee']\n"
           ]
         }
       ]
@@ -2945,9 +2983,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "REjCiiPuwCjD",
-        "outputId": "4f07137b-f30f-45e9-c3cf-53e267d5fb25"
+        "outputId": "408a594c-c85b-42d7-c10d-182a7598c951"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -2967,6 +3005,67 @@
     {
       "cell_type": "code",
       "source": [
+        "items=[\"pizza\",\"burger\",\"cold coffee\",\"coke\",\"blue pacifico\",\"pasta\"]\n",
+        "price=[100,80,50,120,100,130]\n",
+        "total_bill=0\n",
+        "discount=[10,8,5,12,10,13]\n",
+        "discount=0\n",
+        "for i in range(len(items)):\n",
+        "   print(items[i])\n",
+        "for i in range(len(price)):\n",
+        "   print(price[i])\n",
+        "   total_bill +=i\n",
+        "discount_amount=price*discount/100\n",
+        "print(discount_amount)\n",
+        "payable_bill=total_bill-discount_amount\n",
+        "print(payable_bill)\n",
+        "\n",
+        ""
+      ],
+      "metadata": {
+        "id": "IUE30qr2de2I",
+        "outputId": "9fe3fe0b-3bfa-446c-beba-ebba43daef87",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 419
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "pizza\n",
+            "burger\n",
+            "cold coffee\n",
+            "coke\n",
+            "blue pacifico\n",
+            "pasta\n",
+            "100\n",
+            "80\n",
+            "50\n",
+            "120\n",
+            "100\n",
+            "130\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "can't multiply sequence by non-int of type 'list'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-610015126.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m    \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprice\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m    \u001b[0mtotal_bill\u001b[0m \u001b[0;34m+=\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0mdiscount_amount\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mprice\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mdiscount\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdiscount_amount\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0mpayable_bill\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtotal_bill\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mdiscount_amount\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: can't multiply sequence by non-int of type 'list'"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "discount=[5,6,7,5,10,15,6,10,15,10]\n",
         "print(discount[0]+discount[1]+discount[2]+discount[3]+discount[4]+discount[5]+discount[6]+discount[7]+discount[8]+discount[9])"
       ],
@@ -2977,7 +3076,7 @@
         "id": "eP5_dzmFuF7S",
         "outputId": "801b53b6-f773-4470-a896-fff0fb9859a2"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3318,7 +3417,7 @@
         "id": "yIx8XceQiXCL",
         "outputId": "d5a805ed-974a-400e-8cf5-999b5cc64379"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
