--- a/lAWANIYA.ipynb
+++ b/lAWANIYA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNZJ3ElE6aKRJMZjmH0PFTm",
+      "authorship_tag": "ABX9TyPVACnqjujINOpA6VuVDiup",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2927,30 +2927,49 @@
       "cell_type": "code",
       "source": [
         "items=[]\n",
+        "prices=[]\n",
+        "discounts=[]\n",
         "x=int(input(\"enter item number\"))\n",
         "for i in range (x):\n",
         "  item=input(\"enter item: \")\n",
         "  items.append(item)\n",
-        "print(\"items:\",items)"
+        "  price=int(input(\"enter price: \"))\n",
+        "  prices.append(price)\n",
+        "  discount=int(input(\"enter discount: \"))\n",
+        "  discounts.append(discount)\n",
+        "print(\"items:\",items)\n",
+        "print(\"prices: \",prices)\n",
+        "print(\"discounts: \",discounts)\n",
+        "total_bill +=price\n",
+        "total_dis=price*discount/100\n",
+        "payable_bill=total_bill-total_dis\n",
+        "print(total_bill)\n",
+        "print(total_dis)\n",
+        "print(payable_bill)\n"
       ],
       "metadata": {
-        "id": "roeFJP7Oj93b",
-        "outputId": "84c5f36f-e96d-473e-af7d-076776b92f89",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "roeFJP7Oj93b",
+        "outputId": "e21b32b8-185c-4af3-f94a-e6f37471ff5c"
       },
-      "execution_count": 28,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "enter item number3\n",
+            "enter item number1\n",
             "enter item: pizza\n",
-            "enter item: burger\n",
-            "enter item: coffee\n",
-            "items: ['pizza', 'burger', 'coffee']\n"
+            "enter price: 200\n",
+            "enter discount: 20\n",
+            "items: ['pizza']\n",
+            "prices:  [200]\n",
+            "discounts:  [20]\n",
+            "1295\n",
+            "40.0\n",
+            "1255.0\n"
           ]
         }
       ]
@@ -3023,12 +3042,12 @@
         ""
       ],
       "metadata": {
-        "id": "IUE30qr2de2I",
-        "outputId": "9fe3fe0b-3bfa-446c-beba-ebba43daef87",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 419
-        }
+        },
+        "id": "IUE30qr2de2I",
+        "outputId": "9fe3fe0b-3bfa-446c-beba-ebba43daef87"
       },
       "execution_count": 19,
       "outputs": [
