--- a/lAWANIYA.ipynb
+++ b/lAWANIYA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPVACnqjujINOpA6VuVDiup",
+      "authorship_tag": "ABX9TyNPA6u3KUllGFfl5AL0eaOS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2878,7 +2878,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2909,7 +2909,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2926,23 +2926,27 @@
     {
       "cell_type": "code",
       "source": [
+        "#problem solving\n",
         "items=[]\n",
         "prices=[]\n",
         "discounts=[]\n",
+        "total_dis=0\n",
+        "total_bill=0\n",
         "x=int(input(\"enter item number\"))\n",
         "for i in range (x):\n",
-        "  item=input(\"enter item: \")\n",
+        "  item=input(f\"enter item {i+1}: \")\n",
+        "  price=int(input(f\"enter price {i+1}: \"))\n",
+        "  discount=int(input(f\"enter discount{i+1}: \"))\n",
         "  items.append(item)\n",
-        "  price=int(input(\"enter price: \"))\n",
         "  prices.append(price)\n",
-        "  discount=int(input(\"enter discount: \"))\n",
         "  discounts.append(discount)\n",
-        "print(\"items:\",items)\n",
-        "print(\"prices: \",prices)\n",
-        "print(\"discounts: \",discounts)\n",
-        "total_bill +=price\n",
-        "total_dis=price*discount/100\n",
-        "payable_bill=total_bill-total_dis\n",
+        "  total_bill +=price\n",
+        "  total_dis=total_dis+price*discount/100\n",
+        "  payable_bill=total_bill-total_dis\n",
+        "#print(\"items:\",items)\n",
+        "#print(\"prices: \",prices)\n",
+        "#print(\"discounts: \",discounts)\n",
+        "\n",
         "print(total_bill)\n",
         "print(total_dis)\n",
         "print(payable_bill)\n"
@@ -2952,24 +2956,70 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "roeFJP7Oj93b",
-        "outputId": "e21b32b8-185c-4af3-f94a-e6f37471ff5c"
+        "outputId": "0689557b-3695-47e6-f7e6-efbe2ee906d3"
       },
-      "execution_count": 47,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "enter item number1\n",
-            "enter item: pizza\n",
-            "enter price: 200\n",
-            "enter discount: 20\n",
-            "items: ['pizza']\n",
-            "prices:  [200]\n",
-            "discounts:  [20]\n",
-            "1295\n",
-            "40.0\n",
-            "1255.0\n"
+            "enter item number3\n",
+            "enter item 1: pizza\n",
+            "enter price 1: 200\n",
+            "enter discount1: 20\n",
+            "enter item 2: burger\n",
+            "enter price 2: 150\n",
+            "enter discount2: 15\n",
+            "enter item 3: coffee\n",
+            "enter price 3: 180\n",
+            "enter discount3: 18\n",
+            "530\n",
+            "94.9\n",
+            "435.1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "coupon=[\"X10\", \"HNY20\", \"xy15\"]\n",
+        "per=[10,20,15]\n",
+        "coupon_code=input(\"enter coupon: \")\n",
+        "\n",
+        "if coupon_code in coupon:\n",
+        "  indexing=coupon.index(coupon_code)\n",
+        "  dis_on_coupon=payable_bill*per[indexing]/100\n",
+        "  print(dis_on_coupon)\n",
+        "  bill=payable_bill-dis_on_coupon\n",
+        "  print(bill)\n",
+        "else:\n",
+        "  (\"invalid coupon code\")\n",
+        "  print(payable_bill)\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "7f79m5KRo8qe",
+        "outputId": "bf249afc-961f-479a-ff10-87f23b52d2de",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "enter coupon: xy15\n",
+            "30.0\n",
+            "170.0\n"
           ]
         }
       ]
@@ -3004,7 +3054,7 @@
         "id": "REjCiiPuwCjD",
         "outputId": "408a594c-c85b-42d7-c10d-182a7598c951"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3027,57 +3077,34 @@
         "items=[\"pizza\",\"burger\",\"cold coffee\",\"coke\",\"blue pacifico\",\"pasta\"]\n",
         "price=[100,80,50,120,100,130]\n",
         "total_bill=0\n",
-        "discount=[10,8,5,12,10,13]\n",
-        "discount=0\n",
-        "for i in range(len(items)):\n",
-        "   print(items[i])\n",
-        "for i in range(len(price)):\n",
-        "   print(price[i])\n",
-        "   total_bill +=i\n",
-        "discount_amount=price*discount/100\n",
-        "print(discount_amount)\n",
-        "payable_bill=total_bill-discount_amount\n",
-        "print(payable_bill)\n",
         "\n",
-        ""
+        "for i in range(len(items)):\n",
+        "  print(i)\n",
+        "for i in range(len(price)):\n",
+        "  print(i)\n",
+        "  total_bill +=i\n",
+        "print(total_bill)\n",
+        "\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 419
+          "height": 211
         },
         "id": "IUE30qr2de2I",
-        "outputId": "9fe3fe0b-3bfa-446c-beba-ebba43daef87"
+        "outputId": "c39db267-5132-4033-f59b-65da180965f2"
       },
-      "execution_count": 19,
+      "execution_count": 15,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "pizza\n",
-            "burger\n",
-            "cold coffee\n",
-            "coke\n",
-            "blue pacifico\n",
-            "pasta\n",
-            "100\n",
-            "80\n",
-            "50\n",
-            "120\n",
-            "100\n",
-            "130\n"
-          ]
-        },
         {
           "output_type": "error",
           "ename": "TypeError",
-          "evalue": "can't multiply sequence by non-int of type 'list'",
+          "evalue": "'list' object cannot be interpreted as an integer",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-610015126.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m    \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprice\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m    \u001b[0mtotal_bill\u001b[0m \u001b[0;34m+=\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0mdiscount_amount\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mprice\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mdiscount\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdiscount_amount\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0mpayable_bill\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtotal_bill\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mdiscount_amount\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: can't multiply sequence by non-int of type 'list'"
+            "\u001b[0;32m/tmp/ipython-input-2292138710.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mtotal_bill\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: 'list' object cannot be interpreted as an integer"
           ]
         }
       ]
