--- a/lAWANIYA.ipynb
+++ b/lAWANIYA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNPA6u3KUllGFfl5AL0eaOS",
+      "authorship_tag": "ABX9TyOgWv80ou86i/S6kwb6Dm27",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2958,7 +2958,7 @@
         "id": "roeFJP7Oj93b",
         "outputId": "0689557b-3695-47e6-f7e6-efbe2ee906d3"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3011,7 +3011,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3077,34 +3077,46 @@
         "items=[\"pizza\",\"burger\",\"cold coffee\",\"coke\",\"blue pacifico\",\"pasta\"]\n",
         "price=[100,80,50,120,100,130]\n",
         "total_bill=0\n",
-        "\n",
         "for i in range(len(items)):\n",
-        "  print(i)\n",
+        "  print(items[i])\n",
         "for i in range(len(price)):\n",
-        "  print(i)\n",
-        "  total_bill +=i\n",
-        "print(total_bill)\n",
-        "\n"
+        "  print(price[i])\n",
+        "  total_bill += price[i]\n",
+        "  print(\"_____\")\n",
+        "print(total_bill)"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 211
+          "base_uri": "https://localhost:8080/"
         },
         "id": "IUE30qr2de2I",
-        "outputId": "c39db267-5132-4033-f59b-65da180965f2"
+        "outputId": "78766542-ecf6-4106-c958-6b80b39ce10c"
       },
-      "execution_count": 15,
+      "execution_count": 19,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "'list' object cannot be interpreted as an integer",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-2292138710.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mtotal_bill\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: 'list' object cannot be interpreted as an integer"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "pizza\n",
+            "burger\n",
+            "cold coffee\n",
+            "coke\n",
+            "blue pacifico\n",
+            "pasta\n",
+            "100\n",
+            "_____\n",
+            "80\n",
+            "_____\n",
+            "50\n",
+            "_____\n",
+            "120\n",
+            "_____\n",
+            "100\n",
+            "_____\n",
+            "130\n",
+            "_____\n",
+            "580\n"
           ]
         }
       ]
