--- a/lAWANIYA.ipynb
+++ b/lAWANIYA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOgWv80ou86i/S6kwb6Dm27",
+      "authorship_tag": "ABX9TyMsupu9P3qy91zaZDjVTd2l",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2987,6 +2987,7 @@
         "coupon=[\"X10\", \"HNY20\", \"xy15\"]\n",
         "per=[10,20,15]\n",
         "coupon_code=input(\"enter coupon: \")\n",
+        "payable_bill=500\n",
         "\n",
         "if coupon_code in coupon:\n",
         "  indexing=coupon.index(coupon_code)\n",
@@ -3006,20 +3007,55 @@
       ],
       "metadata": {
         "id": "7f79m5KRo8qe",
-        "outputId": "bf249afc-961f-479a-ff10-87f23b52d2de",
+        "outputId": "b8bc9059-e3b9-463f-8af5-f8ec7c19d477",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "enter coupon: xy15\n",
-            "30.0\n",
-            "170.0\n"
+            "75.0\n",
+            "425.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from os import stat_result\n",
+        "customer_name=[\"suresh\", \"rakesh\",\"priya\", \"shivani\",\"swati\", \"amrita\",\"anshika\",\"manu\",\"krishna\",\"yash\"]\n",
+        "product=[\"jeans\",\"t-shirt\",\"trousers\",\"jeans\",\"t-shirt\",\"watch\",\"watch\",\"t-shirt\",\"jeans\",\"watch\"]\n",
+        "price=[500,200,250,500,200,800,800,200,500,800]\n",
+        "state=[\"punjab\",\"up\",\"haryana\",\"hp\",\"up\",\"haryana\",\"up\",\"punjab\",\"up\",\"hp\"]\n",
+        "gender=[\"m\",\"f\",\"f\",\"m\",\"f\",\"m\",\"f\",\"m\",\"f\",\"m\"]\n",
+        "us=[]\n",
+        "#for i in state:\n",
+        "  #print(i)\n",
+        "for i in state:\n",
+        "  if i not in us:\n",
+        "    us.append(i)\n",
+        "print(us)\n"
+      ],
+      "metadata": {
+        "id": "y-Yz9SRfvqBM",
+        "outputId": "40f70c0b-a0f5-41f3-e3b6-fd512e24d881",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['punjab', 'up', 'haryana', 'hp']\n"
           ]
         }
       ]
@@ -3092,7 +3128,7 @@
         "id": "IUE30qr2de2I",
         "outputId": "78766542-ecf6-4106-c958-6b80b39ce10c"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
