--- a/VAISHNAVI.ipynb
+++ b/VAISHNAVI.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOSSfn1YmYakPNPaJSbuvBt",
+      "authorship_tag": "ABX9TyOe9xeRDxVyGmIH7TnQxrBA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -155,7 +155,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -183,7 +183,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -214,7 +214,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -241,7 +241,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -252,6 +252,54 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#tuples\n",
+        "items=(\"sweets\",\"fruits\",\"chocolates\",\"juices\",\"flowers\")\n",
+        "price=(200,500,250,180,120)\n",
+        "dis=(5,20,10,10,5)\n",
+        "total_bill=0\n",
+        "total_dis=0\n",
+        "\n",
+        "for i in range (len(items)):\n",
+        "  total_bill+=price[i]\n",
+        "print(\"total bill: \",total_bill)\n",
+        "total_dis=total_bill*dis[i]/100\n",
+        "print(\"total dis: \",total_dis)\n",
+        "payable_bill=total_bill-total_dis\n",
+        "print(\"payable bill: \", payable_bill)\n",
+        ""
+      ],
+      "metadata": {
+        "id": "prYbO0jFuuEO",
+        "outputId": "418edabb-82cc-4ed4-fad1-52d194a1dc0f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "total bill:  1250\n",
+            "total dis:  62.5\n",
+            "payable bill:  1187.5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "MZkWD10q1szc"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
