--- a/VAISHNAVI.ipynb
+++ b/VAISHNAVI.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN/zbvK5V04qsEFlwpqza3X",
+      "authorship_tag": "ABX9TyMx5h0nP2B8MNEPPbcRol3b",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -279,7 +279,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -544,7 +544,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -574,7 +574,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -602,7 +602,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -611,6 +611,35 @@
             "name is gaurav\n",
             "age is 26\n",
             "salary is 100000\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "employee={\"name\":\"raju\",\n",
+        "          \"age\":21,\n",
+        "          \"salary\":50000}\n",
+        "for key,value in employee.items():\n",
+        "  print(key, \"is\", value)"
+      ],
+      "metadata": {
+        "id": "KZrIAaSDrIbd",
+        "outputId": "ef73b784-0925-4750-826c-28c83dc08523",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "name is raju\n",
+            "age is 21\n",
+            "salary is 50000\n"
           ]
         }
       ]
@@ -633,12 +662,12 @@
       ],
       "metadata": {
         "id": "2TEmFC1Cbyp4",
-        "outputId": "785df34a-8c1e-473d-a808-575a13b21bc4",
+        "outputId": "b193b73a-f787-40f6-ff01-9f23cca61c03",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -651,6 +680,109 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "a=10\n",
+        "b=5\n",
+        "print(a/b)"
+      ],
+      "metadata": {
+        "id": "jyRqHZVveVhi",
+        "outputId": "3aa2b330-413f-45f6-b4e5-28764e6ca33f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#exception handling\n",
+        "try:\n",
+        "  a=10\n",
+        "  b=10\n",
+        "  print(a/b)\n",
+        "except ZeroDivisionError:\n",
+        "  print(\"not divisible by zero\")\n",
+        "else:\n",
+        "  print(\"value executed successfully\")\n",
+        "finally:\n",
+        "  print(\"thank u\")"
+      ],
+      "metadata": {
+        "id": "IfpHksgXhMSK",
+        "outputId": "1ff141cc-bdbc-46bb-b1db-694f1faf6a87",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1.0\n",
+            "value executed successfully\n",
+            "thank u\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "try:\n",
+        "  a=10\n",
+        "  b=0\n",
+        "  print(a/b)\n",
+        "except ZeroDivisionError:\n",
+        "  print(\"divison by zero not possible\")\n",
+        "else:\n",
+        "  print(\"value executed successfully\")\n",
+        "finally:\n",
+        "  print(\"thank you\")"
+      ],
+      "metadata": {
+        "id": "Bo110IAriit1",
+        "outputId": "185f9ab3-c76c-4ebd-b232-34115027cd90",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "divison by zero not possible\n",
+            "thank you\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Cn4fVcgCoZkg"
+      },
+      "execution_count": 13,
+      "outputs": []
     }
   ]
 }
