--- a/VAISHNAVI.ipynb
+++ b/VAISHNAVI.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMx5h0nP2B8MNEPPbcRol3b",
+      "authorship_tag": "ABX9TyOudVBfqxyn1NTWtyIPYqrH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -631,7 +631,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -667,7 +667,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -677,6 +677,47 @@
             "[50000, 45000, 35000, 25000, 30000]\n",
             "[21, 22, 21, 23, 20]\n",
             "total salary: 185000\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "products={\"name\":[\"fruits\",\"sweets\",\"chocolates\"],\n",
+        "          \"price\": [200,300,250],\n",
+        "          \"discount\":[10,10,10]}\n",
+        "price=0\n",
+        "discounts=0\n",
+        "total=products[\"price\"]\n",
+        "total_dis=products[\"discount\"]\n",
+        "for i in total:\n",
+        "  price=price+i\n",
+        "print(price)\n",
+        "for j in range(len(total)):\n",
+        "  total_discounts=price*total_dis[j]/100\n",
+        "print(total_discounts)\n",
+        "payable_bill=price-total_discounts\n",
+        "print(payable_bill)\n",
+        "\n",
+        ""
+      ],
+      "metadata": {
+        "id": "z8XYy36x9395",
+        "outputId": "6b57d845-c11e-422c-ff2a-abad6148ca03",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "750\n",
+            "75.0\n",
+            "675.0\n"
           ]
         }
       ]
@@ -696,7 +737,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -729,7 +770,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -763,7 +804,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -781,7 +822,7 @@
       "metadata": {
         "id": "Cn4fVcgCoZkg"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     }
   ]
