--- a/VAISHNAVI.ipynb
+++ b/VAISHNAVI.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOudVBfqxyn1NTWtyIPYqrH",
+      "authorship_tag": "ABX9TyM176naOyz5atKCmzEc+Oz/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -699,8 +699,7 @@
         "print(total_discounts)\n",
         "payable_bill=price-total_discounts\n",
         "print(payable_bill)\n",
-        "\n",
-        ""
+        "\n"
       ],
       "metadata": {
         "id": "z8XYy36x9395",
@@ -709,7 +708,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -818,12 +817,176 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#function to perform any task by logic or code\n",
+        "def info():\n",
+        "  print(\"hello world\")\n",
+        "info()\n",
+        "info()"
+      ],
       "metadata": {
-        "id": "Cn4fVcgCoZkg"
+        "id": "Cn4fVcgCoZkg",
+        "outputId": "14258da6-f9b1-44d9-e70f-2e0f7bf27970",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hello world\n",
+            "hello world\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#parameterise(a,b) and argument(values of a,b)\n",
+        "def add_num(a,b):\n",
+        "  print(a+b)\n",
+        "a=add_num(10,20)\n",
+        "b=add_num(50,70)\n",
+        "c=add_num(100,150)"
+      ],
+      "metadata": {
+        "id": "Veen_Qz2nPgF",
+        "outputId": "0b7beb13-6dca-4371-bde7-6c06372bd719",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "30\n",
+            "120\n",
+            "250\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#parameterise and argument (factorial)\n",
+        "def factorial(n):\n",
+        "  fact=1\n",
+        "  for i in range(1,n+1):\n",
+        "   fact=fact*i\n",
+        "  return fact\n",
+        "\n",
+        "factorial(5)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "DDT_b0p8oMDN",
+        "outputId": "8ef2d390-0288-430e-951e-4c6d5032c8b0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "120"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#1 to 5 factorial and sum\n",
+        "def factorial(n):\n",
+        "\n",
+        " fact=1\n",
+        " sum=0\n",
+        " for i in range(1,6):\n",
+        "    fact=fact*i\n",
+        "    sum=fact+sum\n",
+        "\n",
+        " return sum\n",
+        "factorial(5)\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        ""
+      ],
+      "metadata": {
+        "id": "QEOCdg2ormLb",
+        "outputId": "1351f50e-f86a-45d8-f3a0-b486821b81c8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "153"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#1!+3!+5!=? (with function)\n",
+        "def factorial(n):\n",
+        "\n",
+        "  sum=0\n",
+        "  for i in range(1,6,2):\n",
+        "   fact=1\n",
+        "\n",
+        "   for j in range(1,i+1):\n",
+        "    fact=fact*j\n",
+        "   sum=fact+sum\n",
+        "  return sum\n",
+        "\n",
+        "factorial(5)"
+      ],
+      "metadata": {
+        "id": "NqIhq2QwwLhT",
+        "outputId": "8bececd9-da85-42ad-ffd9-bb41efdbeb1f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "127"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 50
+        }
+      ]
     }
   ]
 }
